src/objects/sfsp__ListView__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__Area__c</fullName>
        <label>Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allocation</fullName>
                </value>
                <value>
                    <fullName>Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsp__LastViewed__c</fullName>
        <label>Last Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan</label>
        <referenceTo>sfsp__SalesPlan__c</referenceTo>
        <relationshipLabel>List View</relationshipLabel>
        <relationshipName>ListViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>List View</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>